Adicionando a forca e o boneco. :D

--- a/index.html
+++ b/index.html
@@ -8,7 +8,23 @@
 
 	<div class="jogo">
 
-		<div class="letras">
+		<div class='forca'>
+			<p class='elementos mastro'></p>
+			<p class='elementos base'></p>
+			<p class='elementos topo'></p>
+			<p class='elementos gancho'></p>
+
+			<div class='boneco'>
+				<p class='partes cabeca'></p>
+				<p class='partes corpo'></p>
+				<p class='partes bracos braco-esq'></p>
+				<p class='partes bracos braco-dir'></p>
+				<p class='partes pe-esq'></p>
+				<p class='partes pe-dir'></p>
+			</div>
+		</div>
+
+		<div class="teclado">
 		</div>
 		
 	</div>
